DOCS-WAF-limitations

--- a/calico-enterprise_versioned_docs/version-3.15/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/threat/web-application-firewall.mdx
@@ -43,15 +43,24 @@ With {{prodname}} WAF, you gain visibility into internal east/west traffic at th
 ## Before you begin
 
 **Not supported**
-
+- GKE
+- RKE
+- RKE2
 - Windows
 - eBPF dataplane
-- RKE and RKE2 clusters
 
 **Limitations**
 
-- WAF is not supported for host-networked client pods
-- When selecting and deselecting traffic for WAF, active connections may be disrupted
+WAF cannot be used with:
+  - Host-networked client pods
+  - TLS traffic
+  - [LoadBalancer services](https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer)
+  - Egress gateways
+  - WireGuard on AKS or EKS (unless you apply a specific kernel variable). Contact Support for help.
+
+:::note
+When selecting and deselecting traffic for WAF, active connections may be disrupted.
+:::
 
 :::caution
 
