--- a/calico-cloud_versioned_docs/version-3.17/networking/egress/egress-gateway-azure.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/networking/egress/egress-gateway-azure.mdx
@@ -245,13 +245,13 @@ metadata:
   name: export-egress-ips
 spec:
   exportV4:
-    - action: Accept
-      matchOperator: In
+    - action: Reject
+      matchOperator: NotIn
       cidr: 10.10.10.0/30
 EOF
 ```
 
-Even with BGP filter, {{prodname}} still advertise pod IP blocks. To prevent {{prodname}} advertising pod IP blocks, it is possible to set
+Even with BGP filter, {{prodname}} still advertises pod IP blocks. To prevent {{prodname}} from advertising pod IP blocks, it is possible to set
 `disableBGPExport` to `true` in the default IP pools.
 
 ### Configure route reflectors
