--- a/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
@@ -56,7 +56,7 @@ ownership of the helm resources to the new chart location.
 1. Apply the {{version}} CRDs:
 
    ```bash
-   kubectl replace -f {{manifestsUrl}}/manifests/operator-crds.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/operator-crds.yaml
    ```
 
 1. Install the helm chart in the `tigera-operator` namespace.
