--- a/calico_versioned_docs/version-3.24/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico_versioned_docs/version-3.24/operations/upgrading/kubernetes-upgrade.mdx
@@ -83,7 +83,7 @@ the output and then re-running the command without --dry-run to commit to the ch
 1. Apply the {{version}} CRDs:
 
    ```bash
-   kubectl replace -f {{manifestsUrl}}/manifests/operator-crds.yaml
+   kubectl apply --server-side --force-conflicts -f {{manifestsUrl}}/manifests/operator-crds.yaml
    ```
 
 1. Run the helm upgrade:
