--- a/calico-enterprise_versioned_docs/version-3.17/about/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/about/index.mdx
@@ -24,7 +24,7 @@ The best fit for {{prodname}} is **enterprise teams** who need full control to c
 | Multi-cluster management                           | &bull; Unified management plane to manage clusters and workloads running on different infrastructures and using different Kubernetes distributions<br />&bull; Federated endpoints for policy-writing efficiency<br />&bull; Federated services to extend and automate endpoint sharing<br />&bull; Federated Prometheus metrics |
 | Logs and compliance reports                        | &bull; Out-of-the-box support for PCI DSS, SOC 2, HIPAA, GDPR, NIST, and custom frameworks<br />&bull; Out-of-the-box CIS benchmarks for Kubernetes compliance reports<br />&bull; Pre-defined and custom compliance reports for audit reporting (on-demand or scheduled)<br />&bull; Auditor-ready cluster compliance history |
 | Advanced Calico networking                         | &bull; WireGuard pod-to-pod and host-to-host encryption<br />&bull; Egress gateways to identify the source of traffic at the namespace or pod level when it leaves a Kubernetes cluster to communicate to external resources to avoid opening up a larger set of IP addresses.<br />&bull; Dual top-of-rack (ToR) peering for redundant, active-active network path for business-critical cluster applications (for example, streaming and AI/ML applications) |
-| Advanced Calico networking policy                  | &bull; Policy recommendations to isolate namespaces with network policy<br />&bull; Tiered policy<br />&bull; Stage and preview impacts on traffic before enforcing policy<br />&bull; Network sets to reuse and scale sets of IP addresses used in policies<br />&bull; DNS policy <br />&bull; Application layer policy with Envoy as daemonset<br />&bull; Auto host endpoints<br />&bull; Policy integration with Panorama, Fortinet, and AWS firewalls |
+| Advanced Calico networking policy                  | &bull; Policy recommendations to isolate namespaces with network policy<br />&bull; Tiered policy<br />&bull; Stage and preview impacts on traffic before enforcing policy<br />&bull; Network sets to reuse and scale sets of IP addresses used in policies<br />&bull; DNS policy <br />&bull; Application layer policy with Envoy as daemonset<br />&bull; Auto host endpoints<br />&bull; Policy integration with Fortinet and AWS firewalls |
 
 For a detailed list of {{prodname}} features, see [Tigera product comparison](../about/product-comparison.mdx)
 
