Fix: This PR fixes an incorrect command in our EKS documentation.

--- a/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -155,7 +155,7 @@ Before you get started, make sure you have downloaded and configured the [necess
 1. Patch the CNI type with value `Calico`.
 
     ```batch
-    kubectl patch installation default --type='json' -p='[{"op": "replace", "path": "/spec/cni/type", "value": "Calico"}]'
+    kubectl patch installation default --type='json' -p='[{"op": "replace", "path": "/spec/cni", "value": {"type":"Calico"} }]'
     ```
 
 1. Finally, add nodes to the cluster.
