--- a/calico-enterprise_versioned_docs/version-3.17/network-policy/policy-best-practices.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/network-policy/policy-best-practices.mdx
@@ -102,6 +102,10 @@ Although defining network policy for traffic external to clusters (north-south) 
 
 For examples, see [basic ingress and egress policies](beginners/calico-network-policy.mdx).
 
+:::note
+Policies are immediately applied to any new connections. However, for existing, or "long-lived" connections, the policy changes will only take effect after the connection has been reestablished. This means that any ongoing sessions may not immediately reflect policy changes until they are initiated again.
+:::
+
 ## Policy design for efficiency and performance
 
 Teams can write policies that work, but ultimately you want policies that also scale, and do not negatively impact performance.
