--- a/calico-enterprise_versioned_docs/version-3.17/network-policy/policy-tiers/policy-tutorial-ui.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/network-policy/policy-tiers/policy-tutorial-ui.mdx
@@ -210,6 +210,10 @@ If the tier contains policies that apply to the endpoint, but the policies take 
 
 If no tiers contain policies that apply to the endpoint, the connection is allowed by an implicit allow.
 
+:::note
+Policies are immediately applied to any new connections. However, for existing connections that are already open,  the policy changes will only take effect after the connection has been reestablished. This means that any ongoing sessions may not immediately reflect policy changes until they are initiated again.
+:::
+
 ### Policies with no order value
 
 You can create policies without an order value. When a policy with no order value is placed in a tier with other policies that do have an order value, the policies are processed as follows:
