--- a/calico-enterprise/network-policy/policy-tiers/policy-tutorial-ui.mdx
+++ b/calico-enterprise/network-policy/policy-tiers/policy-tutorial-ui.mdx
@@ -188,6 +188,10 @@ Now that you know the basic elements of a network policy, let's move on to polic
 
 Kubernetes and {{prodname}} policies work side by side without a problem. However, Kubernetes network policies cannot assign an order value, so {{prodname}} will set an implicit order value of 1000 to any Kubernetes network policies.
 
+:::note
+Policies are immediately applied to any new connections. However, for existing connections that are already open,  the policy changes will only take effect after the connection has been reestablished. This means that any ongoing sessions may not immediately reflect policy changes until they are initiated again.
+:::
+
 ### {{prodname}} policies with no order value
 
 {{prodname}} policies with order values take precedence. Policies without order values take lesser precedence and are processed alphabetically.
