--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/beginners/calico-network-policy.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/beginners/calico-network-policy.mdx
@@ -262,6 +262,10 @@ Spec:
         selector: role == 'frontend'
 ```
 
+### Create policy for established connections
+
+Policies are immediately applied to any new connections. However, for existing connections that are already open, the policy changes will only take effect after the connection has been reestablished. This means that any ongoing sessions may not immediately reflect policy changes until they are initiated again.
+
 ## Additional resources
 
 - For additional Calico network policy features, see [Calico network policy](../../reference/resources/networkpolicy.mdx) and [Calico global network policy](../../reference/resources/globalnetworkpolicy.mdx)
