--- a/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
@@ -32,6 +32,11 @@ August 21, 2023
 
 You can now create custom role-based access controls for two new roles: "Usage Metrics" and "Image Assurance Admin".
 
+### Image Assurance improvements
+
+- A containerized version of Image Assurance scanner is now available to integrate into your CI/CD platform. See [Image Assurance containerized scanner](https://quay.io/repository/tigera/image-assurance-scanner-cli) to pull the latest image.
+- Substantial UI improvements including a new package-centric view of images
+
 ### Known issues
 
 - The canvas on Service Graph may zoom and pan unexpectedly when modifying Views or Layers
