--- a/calico-cloud_versioned_docs/version-3.17/image-assurance/overview.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/image-assurance/overview.mdx
@@ -1,8 +1,8 @@
 ---
-description: About Calico Cloud Image Assurance.
+description: Choose a method to scan images for vulnerabilities.
 ---
 
-# Overview
+# Choose an image scanning method
 
 ## Big picture
 
@@ -10,10 +10,11 @@ Scan images and Kubernetes workloads for vulnerabilities using {{prodname}} Imag
 
 ## Value
 
-{{prodname}} Image Assurances helps you identify vulnerabilities in workloads that you deploy to Kubernetes clusters. A vulnerability can be a weakness in an application (for example, a design flaw or an implementation bug) that allows attackers to cause additional harm. With Image Assurance you can:
+{{prodname}} Image Assurances helps you identify vulnerabilities in container images that you deploy to Kubernetes clusters. Vulnerabilities are known flaws in libraries and packages used by applications that attackers can exploit and cause harm. With Image Assurance you can:
 
 - Scan an image for vulnerabilities
 - Assess the impact of newly-found vulnerabilities and prioritize remediation efforts
+- Catch vulnerabilities days or weeks later with continuous image rescanning
 - Create exceptions to ignore specific vulnerabilities
 - Create alerts on high-severity vulnerabilities so you can delegate remediation efforts to the appropriate team
 - Block non-compliant workloads using policy as part of your cloud-native security posture
@@ -22,24 +23,22 @@ Scan images and Kubernetes workloads for vulnerabilities using {{prodname}} Imag
 
 Image Assurance is based on the Common Vulnerabilities and Exposures (CVE) system, which provides a catalog of publicly-known security vulnerabilities and exposures. Known vulnerabilities are identified by a unique CVE ID based on the year it was reported (for example, CVE-2021-44228).
 
-Image Assurance provides a command-line interface (CLI) and cluster scanner to scan images, with the option to send results to the Manager UI. Scanned image content includes:
+Scanned image content includes:
 
 - Libraries and content (for example, python, ruby gems, jars and go)
 - Packages (OS and non-OS)
 - Image layer
 
-## Before you begin
+## Image scanning methods
 
-**Update your cluster**
+The Image Assurance scanner can be used to scan images using the following methods with the option to send results to the Manager UI or API.
 
-Update your cluster to get the latest version of Image Assurance:
-
-1. Navigate to the **Managed Clusters** page.
-2. Select the cluster from the list, and click **Reinstall**.
-3. Copy the updated installation script command and run it against your cluster.
+| **Method**                                               | **What images? Where?**                                      | **Benefit**                                                  |
+| -------------------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| Scan all images in a Kubernetes cluster                  | Any running image in the Kubernetes cluster including locally-built first-party images to fix critical bugs. | Provides defense-in-depth coverage and an easy way to get started with vulnerability scanning and remediation. |
+| Integrate Image Assurance scanner in your build pipeline | Images in your application build pipeline and private registeries including:   <br />- Customer-built images<br />- Local images<br />- Third-party images from public registries (for example Kafka, reddis) | Incorporate the IA scanner as a lightweight runner in your build pipeline, and use the scanner offline and on-demand for ad hoc scanning and emergency patching. |
 
 ## Next steps
 
-- Start image scanning using [CLI scanner](./scanners/cli-based-scanner) or [enable automatic image scanning](./scanners/cluster-scanner) inside a cluster using cluster scanner.
-
+- Start image scanning using [CLI scanner](./scanners/pipeline-scanner) or [enable automatic image scanning](./scanners/cluster-scanner) inside a cluster using cluster scanner.
 - [Set up alerts on vulnerabilities](./set-up-alerts)
