--- a/calico-cloud/threat/web-application-firewall.mdx
+++ b/calico-cloud/threat/web-application-firewall.mdx
@@ -117,7 +117,7 @@ kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"policySync
 
 To view WAF events in Service Graph,
 
-1. Selec a service.
+1. Select a service.
 2. Click the HTTP tab.
 
 To simulate an attack to view the default warning in Service Graph, follow these steps:
@@ -167,7 +167,7 @@ spec:
   dataSet: waf
   period: 1m
   lookback: 1h
-  query: '"rule_info" IN {"*942100*"}'
+  query: '"rules.id" = "942100"'
   threshold: 0
   condition: gt
 ```
