--- a/calico-cloud_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -117,7 +117,7 @@ kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"policySync
 
 To view WAF events in Service Graph,
 
-1. Selec a service.
+1. Select a service.
 2. Click the HTTP tab.
 
 To simulate an attack to view the default warning in Service Graph, follow these steps:
