--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -122,7 +122,7 @@ The path of the traffic through policy is as follows:
 1. Packet leaves the client pod and passes through its egress policy.
 2. The packet is encapsulated by the client pod's host and sent to the egress gateway
 3. The encapsulated packet is sent from the host to the egress gateway pod.
-4. The egress gateway pod de-encapsulates the packet and send the packet out again with its own address.
+4. The egress gateway pod de-encapsulates the packet and sends the packet out again with its own address.
 5. The packet leaves the egress gateway pod through its egress policy.
 
 To ensure correct operation, (as of v3.15) the encapsulated traffic between host and egress gateway is auto-allowed by
