--- a/calico_versioned_docs/version-3.25/networking/openstack/ipv6.mdx
+++ b/calico_versioned_docs/version-3.25/networking/openstack/ipv6.mdx
@@ -14,7 +14,7 @@ OpenStack (not {{prodname}}) controls whether a VM gets IPv4, IPv6, or both addr
 
 1.  Verify that the guest VM image meets these requirements for IPv6 connectivity.
 
-    - When booting up, the VM must issue a DHCPv6 request for each of its interfaces, so that it can learn the IPv6 addresses that OpenStack allocates for it. If the VM uses the widely-deployed **DHCP client from ISC**, it must have a fix/workaround for [this known issue](https://kb.isc.org/article/AA-01141/31/How-to-workaround-IPv6-prefix-length-issues-with-ISC-DHCP-clients.html).
+    - When booting up, the VM must issue a DHCPv6 request for each of its interfaces, so that it can learn the IPv6 addresses that OpenStack allocates for it. If the VM uses the widely-deployed **DHCP client from ISC**, it must have a fix/workaround for [this known issue](https://kb.isc.org/docs/aa-01141).
     - The VM must be configured to accept router advertisements.
 
     Although not all common cloud images meet these requirements yet, it is easy to remedy by launching an image, making appropriate changes to its configuration files, taking a snapshot, and then using the snapshot thereafter instead of the original image.
