--- a/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/quickstart.mdx
@@ -437,7 +437,7 @@ In addition to the [{{prodnameWindows}} requirements](kubernetes/requirements.md
 this installation method has [additional requirements](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/):
 
 - Kubernetes v1.22+
-- HostProcess containers support enabled: for v1.22, HostProcess containers support has to be [enabled](https://v1-22.docs.kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/#before-you-begin-version-check). For Kubernetes v1.23+, HostProcess containers are enabled by default.
+- HostProcess containers support enabled: for v1.22, HostProcess containers support has to be [enabled](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/#before-you-begin). For Kubernetes v1.23+, HostProcess containers are enabled by default.
 - ContainerD 1.6.0+
 - The Windows nodes have joined the cluster
 
