--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee/standard.mdx
@@ -1,32 +1,16 @@
 ---
 description: Steps to upgrade from open source Calico to Calico Enterprise.
 ---
-
-# Upgrade from Calico to Calico Enterprise
-
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-export const Paragraph = () => {
-  const cmv = '{{releases.0.calico.minor_version}}';
-  const ap = '{{releases.0.calico.archive_path}}';
-  const cmv_postfix = cmv + '.x';
-  const cmv_path = ap && ap !== '' ? `${ap}/${cmv}` : cmv;
-  return (
-    <p>
-      Ensure that your Kubernetes cluster is running with open source Calico on the latest {cmv_postfix} release using
-      an operator-based installation. If not, follow the{' '}
-      <a href={`https://docs.projectcalico.org/${cmv_path}/maintenance/kubernetes-upgrade`}>
-        Calico upgrade documentation
-      </a>{' '}
-      before continuing.
-    </p>
-  );
-};
+# Upgrade from Calico to Calico Enterprise
 
 ## Prerequisites
 
-<Paragraph />
+Ensure that your Kubernetes cluster is running with open source Calico on the latest release using an operator-based
+installation. If not, follow the [Calico upgrade documentation](/calico/latest/operations/upgrading/kubernetes-upgrade)
+before continuing.
 
 {{prodname}} only supports clusters with a Kubernetes datastore.
 Please contact Tigera Support for assistance upgrading a cluster with an `etcdv3` datastore.
