--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -4,26 +4,11 @@ description: Steps to upgrade from open source Calico to Calico Enterprise on Op
 
 # Upgrade from Calico to Calico Enterprise on OpenShift
 
-export const Paragraph = () => {
-  const cmv = '{{releases.0.calico.minor_version}}';
-  const ap = '{{releases.0.calico.archive_path}}';
-  const cmv_postfix = cmv + '.x';
-  const cmv_path = ap && ap !== '' ? `${ap}/${cmv}` : cmv;
-  return (
-    <p>
-      Ensure that your Kubernetes cluster is running with open source Calico on the latest {cmv_postfix} release using
-      an operator-based installation. If not, follow the{' '}
-      <a href={`https://docs.projectcalico.org/${cmv_path}/maintenance/kubernetes-upgrade`}>
-        Calico upgrade documentation
-      </a>{' '}
-      before continuing.
-    </p>
-  );
-};
-
 ## Prerequisites
 
-<Paragraph />
+Ensure that your Kubernetes cluster is running with open source Calico on the latest release using an operator-based
+installation. If not, follow the [Calico upgrade documentation](/calico/latest/operations/upgrading/openshift-upgrade)
+before continuing.
 
 Ensure your Kubernetes cluster is using the Kubernetes datastore. If you are using an `etcdv3` datastore, or the cluster doesn't have a datastore, contact Tigera Support to upgrade the datastore.
 
