--- a/calico-enterprise_versioned_docs/version-3.17/reference/resources/policyrecommendations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/reference/resources/policyrecommendations.mdx
@@ -53,3 +53,4 @@ $ kubectl patch policyrecommendationscope default -p '{"spec":{"<parameter>":"<v
 | ---------------------- | ------------------------------------------------------------ | --------------- | ------ | -------------- |
 | recStatus              | Defines the policy recommendation engine status.             | Enabled/Disabled |        | Disabled       |
 | selector               | Selects the namespaces for generating recommendations. |                 |        | `!(projectcalico.org/name starts with ''tigera-'') && !(projectcalico.org/name starts with ''calico-'') && !(projectcalico.org/name starts with ''kube-'')`    |
+| intraNamespacePassThroughTraffic               | When true, sets all intra-namespace traffic to Pass | true/false |        | false |
