Update-operator-version

--- a/calico-enterprise_versioned_docs/version-3.14/_includes/release-notes/_v3.14.4-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/_includes/release-notes/_v3.14.4-release-notes.mdx
@@ -1,3 +1,7 @@
+August 21 2023
+
+Tigera Operator version has been updated to v1.27.18. Please see [release notes](https://github.com/tigera/operator/releases/tag/v1.27.18) for details.
+
 Jan 10 2023
 
 :::note
