Add MCM known issue for v3.17

--- a/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.0-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.0-release-notes.mdx
@@ -30,3 +30,4 @@ Or customize the Helm chart using [existing installation steps](../getting-start
 ### Known issues {#known-issues-3.17.0}
 
 * Upgrading to {{prodname}} 3.17.0 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for an upgrade to proceed.
+* Multi-cluster management of managed clusters with version < v3.17.0 is currently not working.
