--- a/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.1-release-notes.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/_includes/release-notes/_v3.17.1-release-notes.mdx
@@ -34,3 +34,4 @@ Or customize the Helm chart using [existing installation steps](../getting-start
 - Policy recommendations may generate rules with ports and protocols for intra-namespace traffic. This will be modified in the next patch release to exclude ports and protocols and provide an option to Allow or Pass this traffic.
 - Installing {{prodname}} on OpenShift Container Platform (OCP) 4.13 with the eBPF dataplane is currently not working
 - Upgrading to {{prodname}} 3.17.1 on Rancher/RKE from {{prodname}} 3.13.0 currently requires manually terminating the calico-node container for an upgrade to proceed.
+- Multi-cluster management of managed clusters with version < v3.17.0 is currently not working.
