--- a/calico-cloud_versioned_docs/version-3.17/image-assurance/overview.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/image-assurance/overview.mdx
@@ -40,6 +40,6 @@ Update your cluster to get the latest version of Image Assurance:
 
 ## Next steps
 
-- Start image scanning using [CLI scanner](./scanners/cli-based-scanner.mdx) or [enable automatic image scanning](./scanners/cluster-scanner.mdx) inside a cluster using cluster scanner.
+- Start image scanning using [CLI scanner](./scanners/cli-based-scanner) or [enable automatic image scanning](./scanners/cluster-scanner) inside a cluster using cluster scanner.
 
-- [Set up alerts on vulnerabilities](set-up-alerts.mdx)
+- [Set up alerts on vulnerabilities](./set-up-alerts)
