--- a/calico-enterprise/threat/web-application-firewall.mdx
+++ b/calico-enterprise/threat/web-application-firewall.mdx
@@ -76,11 +76,17 @@ Enabling WAF for certain system services may result in an undesired cluster stat
 
 :::
 
-### Prerequisites
+## How to
 
-#### Enable the Policy Sync API in Felix
+- [Enable WAF using CLI](#enable-waf-using-cli)
+- [Enable WAF using Manager UI](#enable-waf-using-manager-ui)
+- [Apply WAF to services](#apply-waf-to-services)
+- [View WAF events](#view-waf-events)
+- [Disable WAF feature from your cluster](#disable-waf-feature-from-your-cluster)
 
-If you intend to enable WAF using the CLI rather than in Manager UI, or you have not yet
+### Enable WAF using CLI
+
+To enable WAF using the CLI rather than in Manager UI, or you have not yet
 [configured L7 logs](../visibility/elastic/l7/Configure), you must enable the Policy Sync API in Felix. To do this cluster-wide,
 modify the `default` FelixConfiguration to set the field `policySyncPathPrefix` to `/var/run/nodeagent`:
 
@@ -95,31 +101,6 @@ we recommend that you install the [GoogleCloudPlatform/microservices-demo app](h
 ```bash
 kubectl apply -f https://raw.githubusercontent.com/GoogleCloudPlatform/microservices-demo/release/v0.7.0/release/kubernetes-manifests.yaml
 ```
-## How to
-
-- [Enable WAF on your cluster](#enable-waf-on-your-cluster)
-- [Apply WAF to your services](#apply-waf)
-- [View WAF events](#view-waf-events)
-- [Create global alerts](#create-global-alerts)
-
-### Enable WAF on your cluster
-
-Enabling WAF is a one-time activity. You can enable it either [through UI](#enable-waf-using-the-ui) or [CLIs](#enable-waf-using-kubectl-clis).
-
-#### Enable WAF using the UI
-
-On the Manager UI, click **Threat Defense**, **Web Application Firewall**, **Configure Web Application Firewall**.
-
- <img
-    src='/img/calico-enterprise/waf-config-first-step.png'
-    alt='WAF services'
-    width='600'
-  />
-
-:::note
-
-If WAF is already enabled in your cluster, you do not see this page.
-:::
 
 #### Enable WAF using kubectl CLIs
 
@@ -136,7 +117,22 @@ spec:
 EOF
 ```
 
-## Apply WAF
+### Enable WAF using Manager UI
+
+On the Manager UI, click **Threat Defense**, **Web Application Firewall**, **Configure Web Application Firewall**.
+
+ <img
+    src='/img/calico-enterprise/waf-config-first-step.png'
+    alt='WAF services'
+    width='600'
+  />
+
+:::note
+
+If WAF is already enabled in your cluster, you do not see this page.
+:::
+
+### Apply WAF to services
 
 Now that your cluster is enabled for WAF, you can apply WAF to your services and make sure that your
 Web apps are protected from application layer attacks. 
@@ -146,13 +142,11 @@ If you have deployed the sample application, you can apply WAF on a service asso
 ```bash
 kubectl annotate svc frontend -n default --overwrite projectcalico.org/l7-logging=true
 ```
-Alternatively, you can [use the Manager UI](#apply-waf-to-your-services) to apply WAF to the `frontend` service.
+Alternatively, you can use the Manager UI to apply WAF to the `frontend` service.
 
-In this example, we applied WAF to the `frontend` service. This means that every traffic that goes through the `frontend` service is inspected.
+In this example, we applied WAF to the `frontend` service. This means that every request that goes through the `frontend` service is inspected.
 However, the traffic is not blocked because the WAF rule is set to `DetectionOnly` by default.  
 When you are convinced that the traffic for the service to be denied or dropped, you can [set it to block](#set-waf-rule-to-block-traffic).
-
-### Apply WAF to your services
 
 In the previous example, we applied WAF to the `frontend` service of the sample application. Here, we are
 applying WAF to a service of your own application.
@@ -172,7 +166,7 @@ applying WAF to a service of your own application.
 
 You have now applied WAF rule sets to your own services, and note that the traffic that goes through the selected services will be alerted but not blocked by default.
 
-### Set WAF rule to block traffic
+#### Set WAF rule to block traffic
 You can change WAF rule so that the traffic is blocked.
 
 1. Edit the configmap: 
@@ -184,11 +178,11 @@ You can change WAF rule so that the traffic is blocked.
 | Action | Description                                                                                                                                                             | Disruptive? |
 | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------- |
 | DetectionOnly | Traffic is not denied nor dropped. {{prodname}}  will log events. | No
-| On     | Denies HTTP traffic. {{prodname}}  will log the event in Elasticsearch. | Yes          |
+| On     | Denies HTTP traffic. {{prodname}}  will create a security event. | Yes          |
 | Off    | Be cautious about using this option. Traffic is not denied nor alerted. |No                                                                      | Yes         |
                                          
 
-### Manage your rulesets
+#### Manage rulesets
 
 The default rulesets work fine for most deployments. However, you can customize them to suit your requirements.
 
@@ -249,7 +243,7 @@ To simulate an attack to view the default warning in Service Graph, follow these
    - The cluster IP of your application's service (if testing within the cluster)
 2. Enter the following command to trigger a SQL injection attack.
 
-##### Example: SQL Injection attack
+#### Example: SQL Injection attack
 
 ```
   curl http://my.loadbalancer.address/cart?artist=0+div+1+union%23foo*%2F*bar%0D%0Aselect%23foo%0D%0A1%2C2%2Ccurrent_user
@@ -263,44 +257,17 @@ In Service Graph, go to the service and click the HTTP tab. You will see the fol
 
 #### Threat defense
 
-To view WAF events in a centralized security events dashboard, go to: **Threat defense**, **Security Events**. For help, see [Security Event Management](./security-event-management).
+To view WAF events in a centralized security events dashboard, go to: **Threat defense**, **Security Events**. For help, see [Security Event Management](../threat/security-event-management).
 
 #### Kibana
 
 To view WAF events In Kibana:
 
-1. Create the `tigera_secure_ee_waf*` index pattern. For help with index patterns, see [Kibana index pattern](../visibility/kibana.mdx).
+1. Create the `tigera_secure_ee_waf*` index pattern. For help with index patterns, see [Kibana index pattern](../visibility/kibana).
 
 2. Select the `tigera_secure_ee_waf*` index pattern. 
 
 You should see the relevant WAF assessment from your request.
-
-### Create global alerts
-
-To get notifications on WAF events, create Global Alerts.
-
-The following example creates a Global Alert for a SQL Injection attack. Specifically, for Rule ID 942100 [Core Rule Set file](https://raw.githubusercontent.com/coreruleset/coreruleset/v3.3/dev/rules/REQUEST-942-APPLICATION-ATTACK-SQLI.conf) 
-that will "deny" all traffic instead of "block" traffic.
-
-```yaml
-apiVersion: projectcalico.org/v3
-kind: GlobalAlert
-metadata:
-  name: waf-new-alert-rule-info
-spec:
-  summary: 'WAF new waf-alert-942100'
-  description: 'Test WAF Global Alert'
-  severity: 1
-  dataSet: waf
-  period: 5m
-  lookback: 5m
-  query: '"rules.id" = "942100"'
-  threshold: 0
-  condition: gt
-```
-Apply the YAML to your cluster using: `kubectl apply -f test-demo-alert.yaml`
-
-If a SQL Injection attack is detected for rule ID 942100, you will see a security event in the dashboard here: **Threat defense**, **Security Events**.
 
 #### Disable WAF for a service
 
@@ -310,7 +277,7 @@ To disable WAF on a service, use the Actions menu on the WAF board, or use the f
 kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-logging-
 ```
 
-#### Disable WAF feature from your cluster
+### Disable WAF feature from your cluster
 
 To disable WAF, update the [ApplicationLayer](../reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
 
