DOCS-Add-help-usage-metrics

--- a/calico-cloud_versioned_docs/version-3.17/get-started/connect/usage-metrics.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/get-started/connect/usage-metrics.mdx
@@ -13,8 +13,9 @@ In Manager UI:
 
 ![usage-metrics](/img/calico-cloud/usage-metrics.png)
 
-## How NodeHours are calculated to determine NodeHours Cost
+## How NodeHours are calculated
 
-`NodeHours` are calculated for a single node by dividing the vCPU of each node by four, round up, and then *add them together*. Note that the results are different from adding up all the vCPU and dividing by four (because it is done on a per-node basis). For example, if you install CC on a single machine with 32 physical cores (and thus, 64 cores presented to the kernel), and if each node only goes up to 4 vCPU, the result is 64 vcpu / 4 = 16 billable nodes.
+`NodeHours` are calculated for a single node by dividing the vCPU of each node by four, rounding up, and then *adding them together*. Because the calculation is on a per-node basis, the results are not the same as adding up all the vCPU and dividing by four. `NodeHours` are updated every hour, and change every month because of the different number of days in a month.
 
-Also be aware that `NodeHours` will change per month, depending on the number of days in a month.
+For example, if you install {{prodname}} on a single machine with 32 physical cores (64 cores are presented to the kernel), and if each node only goes up to 4 vCPU, the result is 64 vcpu / 4 = 16 billable nodes.
+
